Least Mean Squares setting up

--- a/machine-learning/supervised-learning/regression-problem/least-mean-squares-algorithm.ipynb
+++ b/machine-learning/supervised-learning/regression-problem/least-mean-squares-algorithm.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supervised Learning\n"
+    "# Least Mean Squares Algorithm\n",
+    "\n",
+    "// TODO"
    ]
   }
  ],
