--- a/machine-learning/supervised-learning/classification-problem/intro.ipynb
+++ b/machine-learning/supervised-learning/classification-problem/intro.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supervised Learning\n"
+    "# Classification Problem\n",
+    "\n",
+    "// TODO"
    ]
   }
  ],
