Machine Learning pdfs links

--- a/machine-learning/supervised-learning/intro.ipynb
+++ b/machine-learning/supervised-learning/intro.ipynb
@@ -15,9 +15,24 @@
     "\n",
     "When the target variable $\\mathcal{y}$ that we're trying to predict is continuous, we call the learning problem a [regression problem](./regression-problem/intro.ipynb). When it can take on only a small number of discrete values, we call it a [classification problem](./classification-problem/intro.ipynb)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "\n",
+    "IFrame('https://drive.google.com/file/d/1wiLvYFT5pQBlhI7wfuYKMpcxAQiQ5NSj/preview', width=340, height=220)"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Hide code",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
