--- a/machine-learning/supervised-learning/regression-problem/intro.ipynb
+++ b/machine-learning/supervised-learning/regression-problem/intro.ipynb
@@ -20,9 +20,24 @@
     "\n",
     " * [Least Mean Squares](./least-mean-squares-algorithm.ipynb)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "\n",
+    "IFrame('https://drive.google.com/file/d/1YqC1UIMsry0WpTTAdHcEJs5csamIJrK_/preview', width=340, height=220)"
+   ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Hide code",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
