--- a/machine-learning/supervised-learning/regression-problem/least-mean-squares-algorithm.ipynb
+++ b/machine-learning/supervised-learning/regression-problem/least-mean-squares-algorithm.ipynb
@@ -4,10 +4,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Least Mean Squares Algorithm\n",
-    "\n",
-    "// TODO"
+    "# Least Mean Squares Algorithm\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"340\"\n",
+       "            height=\"220\"\n",
+       "            src=\"https://drive.google.com/file/d/1OgVqxvRJ1RnVAOgKJCMn39NNzDfVLQEe/preview\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x6fffd9c9fd0>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import IFrame\n",
+    "\n",
+    "IFrame('https://drive.google.com/file/d/1OgVqxvRJ1RnVAOgKJCMn39NNzDfVLQEe/preview', width=340, height=220)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
