--- a/machine-learning/supervised-learning/intro.ipynb
+++ b/machine-learning/supervised-learning/intro.ipynb
@@ -11,7 +11,7 @@
     "To describe the supervised learning problem slightly more formally, our goal is, given a training set, to learn a function\n",
     "$h : \\mathcal{X} \\rightarrow \\mathcal{X}$ so that $\\mathcal{h(x)}$ is a \"good\" predictor for the corresponding value of $\\mathcal{y}$. For historical reasons, this function $\\mathcal{h}$ is called a hypothesis.\n",
     "\n",
-    "<img src=\"supervised-learning.png\">\n",
+    "<img src=\"supervised-learning.PNG\">\n",
     "\n",
     "When the target variable $\\mathcal{y}$ that we're trying to predict is continuous, we call the learning problem a [regression problem](./regression-problem/intro.ipynb). When it can take on only a small number of discrete values, we call it a [classification problem](./classification-problem/intro.ipynb)."
    ]
@@ -29,6 +29,13 @@
     "\n",
     "IFrame('https://drive.google.com/file/d/1wiLvYFT5pQBlhI7wfuYKMpcxAQiQ5NSj/preview', width=340, height=220)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -48,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
