--- a/machine-learning/supervised-learning/linear-regression.ipynb
+++ b/machine-learning/supervised-learning/linear-regression.ipynb
@@ -180,6 +180,7 @@
     "            print (np.sum(theta * t[i,0:3]))\n",
     "            print (\"error \", t[i,3] - np.sum(theta * t[i,0:3]))\n",
     "            print (t[i,j])\n",
+    "            # What is wrong with it: partials being summed up within the wrong j component. Use instead \n",
     "            partial = partial + (t[i,3] - np.sum(theta * t[i,0:3])) * t[i,j]\n",
     "            print (\"partial\", partial)\n",
     "            print(\"---\")\n",
