Adding debugging info

--- a/machine-learning/supervised-learning/linear-regression.ipynb
+++ b/machine-learning/supervised-learning/linear-regression.ipynb
@@ -21,12 +21,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"340\"\n",
+       "            height=\"220\"\n",
+       "            src=\"https://drive.google.com/file/d/1cJHJ5AdcFd0tibQvCrME4ychIrvPQoGc/preview\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7efd3859b4a8>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import IFrame\n",
     "IFrame('https://drive.google.com/file/d/1cJHJ5AdcFd0tibQvCrME4ychIrvPQoGc/preview', width=340, height=220)"
@@ -34,9 +56,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"340\"\n",
+       "            height=\"220\"\n",
+       "            src=\"https://drive.google.com/file/d/1WknHdpGr4HkJU3ZCuW9i0tBJDF6MDd5w/preview\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7efd3859b3c8>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from IPython.display import IFrame\n",
     "IFrame('https://drive.google.com/file/d/1WknHdpGr4HkJU3ZCuW9i0tBJDF6MDd5w/preview', width=340, height=220)"
@@ -155,19 +199,20 @@
     "\n",
     "# 89.60, θ1 = 0.1392, θ2 = −8.738\n",
     "\n",
-    "theta = np.array([89.0, 0.1, -8.0])\n",
-    "theta_n = np.array([0, 0, 0])\n",
+    "theta = np.array([.0, 0.001, -1.0])\n",
+    "theta_n = np.array([.0, .0, .0])\n",
     "\n",
     "j = 0\n",
     "i = 1\n",
     "\n",
-    "alpha = 0.01\n",
+    "alpha = 0.00001\n",
     "num_parameters = 3\n",
     "num_of_samples = 5\n",
     "\n",
     "# print (error)\n",
     "\n",
-    "for x in range(0, 2):\n",
+    "for x in range(0, 10):\n",
+    "    print(\"=====\")\n",
     "    for j in range(0, num_parameters):\n",
     "        partial = .0\n",
     "        for i in range(0, num_of_samples):\n",
@@ -179,12 +224,12 @@
     "            print (theta * t[i,0:3])\n",
     "            print (np.sum(theta * t[i,0:3]))\n",
     "            print (\"error \", t[i,3] - np.sum(theta * t[i,0:3]))\n",
-    "            print (t[i,j])\n",
-    "            # What is wrong with it: partials being summed up within the wrong j component. Use instead \n",
+    "            print (\"t[i,j]\", t[i,j])\n",
     "            partial = partial + (t[i,3] - np.sum(theta * t[i,0:3])) * t[i,j]\n",
     "            print (\"partial\", partial)\n",
     "            print(\"---\")\n",
     "        theta_n[j] = theta[j] + alpha * partial\n",
+    "        print(\"theta_n\", theta_n)\n",
     "    theta = theta_n\n",
     "\n",
     "print (theta)"
@@ -215,7 +260,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
