[machine-learning][supervised-learning] LMS algorithm

--- a/machine-learning/supervised-learning/linear-regression.ipynb
+++ b/machine-learning/supervised-learning/linear-regression.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -41,10 +41,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7efd3859b4a8>"
+       "<IPython.lib.display.IFrame at 0x6fffdf05048>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +73,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7efd3859b3c8>"
+       "<IPython.lib.display.IFrame at 0x6fffdd7e668>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
     "\n",
     "$$J(\\theta) = \\frac{1}{2} \\sum_{i=0}^{m} (h_\\theta(x^{(i)}) - y^{(i)})^2 $$\n",
     "\n",
-    "Which measures the half total of the total square distance from model to reality.IFrame('https://drive.google.com/file/d/1WknHdpGr4HkJU3ZCuW9i0tBJDF6MDd5w/preview', width=340, height=220)"
+    "Which measures the half total of the total square distance from model to reality."
    ]
   },
   {
@@ -133,7 +133,48 @@
     "\n",
     "$$\\theta_{j} := \\theta_j + \\alpha \\cdot (y^{(i)}  - h_\\theta(x^{(i)})) x_j^{(i)}$$\n",
     "\n",
+    "This formula works with a single example for a single parameter. We can generalize too\n",
+    "\n",
+    "$\\text{repeat until convergence } \\big\\{$\n",
+    "\n",
+    "$\\quad \\quad \\text{for each i sample } \\big\\{$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "    \\theta_{0} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\theta_{j}\n",
+    "\\end{bmatrix}\n",
+    ":=\n",
+    "\\begin{bmatrix}\n",
+    "    \\theta_{0} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\theta_{j}\n",
+    "\\end{bmatrix}\n",
+    "+ \\alpha \\cdot \\Bigg(y^{(i)} - \n",
+    "\\begin{bmatrix}\n",
+    "    x^{i}_{0} & \\dots & x^{i}_{j} \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\cdot\n",
+    "\\begin{bmatrix}\n",
+    "    \\theta_{0} \\\\\n",
+    "    \\vdots \\\\\n",
+    "    \\theta_{j}\n",
+    "\\end{bmatrix}\n",
+    "\\Bigg) \\cdot\n",
+    "\\begin{bmatrix}\n",
+    "    x^{i}_{0} \\\\ \n",
+    "    \\dots \\\\\n",
+    "    x^{i}_{j}\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "$\\quad \\quad \\big\\}$\n",
+    "\n",
+    "$\\big\\}$\n",
+    "\n",
     "The rule is called the LMS update rule and is also known as the Widrow-Hoff learning rule. Note that the magnitude of the update is proportional to the error term $(y^{(i)}  - h_\\theta(x^{(i)}))$. This method looks at every example in the entire training set on every step, and is called **batch gradient descent**. It is also important that, while gradient descent can be susceptible to local minima in general, the optimization problem we have posed here for linear regression has only one global, and no other local, optima; thus **gradient descent always converges** (assuming the learning rate $\\alpha$ is not too large) to the global minimum.\n",
+    "\n",
+    "Notice that $\\alpha$ has a huge part in the stability of the whole process. As bigger the dataset gets, smaller it has to be. The biggest is the precision we want, the smaller it has to be. Smaller it gets, the slower the convergence will be. \n",
     "\n",
     "#### Example\n",
     "\n",
@@ -150,97 +191,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import numpy as np\n",
-    "\n",
-    "t = np.array([[2104, 3, 400],\n",
-    "             [1600, 3, 330],\n",
-    "             [2400, 3, 369],\n",
-    "             [1416, 2, 232],\n",
-    "             [3000, 4, 540]])\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = Axes3D(fig)\n",
-    "ax.scatter(t[:,0], t[:,1], t[:,2])\n",
-    "ax.set_xlabel('Living area (quare feet)')\n",
-    "ax.set_ylabel('# Bedrooms')\n",
-    "ax.set_zlabel('Selling Price (1000$)')\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Applying now LMS algorith:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cost:  2409.47201546\n",
+      "[ 89.99986371   0.15941472  -9.00033009]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
-    "t = np.array([[1, 2104, 3, 400],\n",
-    "             [1, 1600, 3, 330],\n",
-    "             [1, 2400, 3, 369],\n",
-    "             [1, 1416, 2, 232],\n",
-    "             [1, 3000, 4, 540]])\n",
+    "x = np.array([[1, 2104, 3],\n",
+    "             [1, 1600, 3],\n",
+    "             [1, 2400, 3],\n",
+    "             [1, 1416, 2],\n",
+    "             [1, 3000, 4]])\n",
     "\n",
-    "# 89.60, θ1 = 0.1392, θ2 = −8.738\n",
+    "y = np.array([400, 330, 369, 232, 540])\n",
     "\n",
-    "theta = np.array([.0, 0.001, -1.0])\n",
-    "theta_n = np.array([.0, .0, .0])\n",
+    "theta = np.array([90, .4, -9.0])\n",
     "\n",
-    "j = 0\n",
-    "i = 1\n",
+    "alpha = 0.0000001\n",
     "\n",
-    "alpha = 0.00001\n",
-    "num_parameters = 3\n",
-    "num_of_samples = 5\n",
+    "last_cost = float(\"inf\")\n",
     "\n",
-    "# print (error)\n",
+    "while True:\n",
+    "    cost = float(.0)\n",
+    "    for i in range(0, np.size(x, 0)):\n",
+    "        theta = theta + alpha * (y[i] - np.sum(x[i] * theta)) * x[i]\n",
+    "        cost += (y[i] - np.sum(theta * x[i]))**2\n",
+    "    if(last_cost - cost < 0.0001):\n",
+    "        last_cost = cost\n",
+    "        break\n",
+    "    last_cost = cost\n",
     "\n",
-    "for x in range(0, 10):\n",
-    "    print(\"=====\")\n",
-    "    for j in range(0, num_parameters):\n",
-    "        partial = .0\n",
-    "        for i in range(0, num_of_samples):\n",
-    "            print(theta)\n",
-    "            print (i)\n",
-    "            print (j)\n",
-    "            print (t[i,3])\n",
-    "            print (t[i,0:4])\n",
-    "            print (theta * t[i,0:3])\n",
-    "            print (np.sum(theta * t[i,0:3]))\n",
-    "            print (\"error \", t[i,3] - np.sum(theta * t[i,0:3]))\n",
-    "            print (\"t[i,j]\", t[i,j])\n",
-    "            partial = partial + (t[i,3] - np.sum(theta * t[i,0:3])) * t[i,j]\n",
-    "            print (\"partial\", partial)\n",
-    "            print(\"---\")\n",
-    "        theta_n[j] = theta[j] + alpha * partial\n",
-    "        print(\"theta_n\", theta_n)\n",
-    "    theta = theta_n\n",
-    "\n",
-    "print (theta)"
+    "print(\"cost: \", last_cost)\n",
+    "print(theta)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -260,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
