[machine-learning][supervised-learning] Switching from stochastic gradient descent to gradient descent

--- a/machine-learning/supervised-learning/linear-regression.ipynb
+++ b/machine-learning/supervised-learning/linear-regression.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 46,
    "metadata": {
     "hideCode": false,
     "hidePrompt": true
@@ -41,10 +41,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x6fffdf05048>"
+       "<IPython.lib.display.IFrame at 0x7f0790050cf8>"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -73,10 +73,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x6fffdd7e668>"
+       "<IPython.lib.display.IFrame at 0x7f07900509b0>"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
     "\n",
     "In order to learn parameters $\\theta$ the most naive choice is to make $h(x)$ as close as possible from $\\mathcal{Y}$, which brings us to the cost function:\n",
     "\n",
-    "$$J(\\theta) = \\frac{1}{2} \\sum_{i=0}^{m} (h_\\theta(x^{(i)}) - y^{(i)})^2 $$\n",
+    "$$J(\\theta) = \\frac{1}{2} \\sum_{i=1}^{m} (h_\\theta(x^{(i)}) - y^{(i)})^2 $$\n",
     "\n",
     "Which measures the half total of the total square distance from model to reality."
    ]
@@ -137,8 +137,6 @@
     "\n",
     "$\\text{repeat until convergence } \\big\\{$\n",
     "\n",
-    "$\\quad \\quad \\text{for each i sample } \\big\\{$\n",
-    "\n",
     "$$\n",
     "\\begin{bmatrix}\n",
     "    \\theta_{0} \\\\\n",
@@ -151,7 +149,9 @@
     "    \\vdots \\\\\n",
     "    \\theta_{j}\n",
     "\\end{bmatrix}\n",
-    "+ \\alpha \\cdot \\Bigg(y^{(i)} - \n",
+    "+ \\alpha \\cdot\n",
+    "\\sum_{i=1}^{m}\n",
+    "\\Bigg(y^{(i)} - \n",
     "\\begin{bmatrix}\n",
     "    x^{i}_{0} & \\dots & x^{i}_{j} \\\\\n",
     "\\end{bmatrix}\n",
@@ -168,7 +168,6 @@
     "    x^{i}_{j}\n",
     "\\end{bmatrix}\n",
     "$$\n",
-    "$\\quad \\quad \\big\\}$\n",
     "\n",
     "$\\big\\}$\n",
     "\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 48,
    "metadata": {
     "scrolled": false
    },
@@ -200,8 +199,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cost:  2409.47201546\n",
-      "[ 89.99986371   0.15941472  -9.00033009]\n"
+      "θ₀= [90.   0.4 -9. ]\n",
+      "J(θ₀)= 1496423.12\n",
+      "θ= [89.99988093  0.14968334 -9.00033479]\n",
+      "J(θ)= 8142.323265782019\n"
      ]
     }
    ],
@@ -218,22 +219,32 @@
     "\n",
     "theta = np.array([90, .4, -9.0])\n",
     "\n",
-    "alpha = 0.0000001\n",
+    "cost = float(.0)\n",
+    "for i in range(0, np.size(x, 0)):\n",
+    "    cost += (y[i] - np.sum(theta * x[i]))**2\n",
     "\n",
-    "last_cost = float(\"inf\")\n",
+    "print(\"\\u03B8\\u2080=\", theta)\n",
+    "print(\"J(\\u03B8\\u2080)=\", cost)\n",
     "\n",
+    "alpha = 0.00000001\n",
+    "last_cost = cost\n",
     "while True:\n",
+    "    partial = np.zeros(theta.size)\n",
+    "    for i in range(0, np.size(x, 0)):\n",
+    "        partial += (y[i] - np.sum(x[i] * theta)) * x[i]\n",
+    "    theta += alpha * partial\n",
+    "    \n",
     "    cost = float(.0)\n",
     "    for i in range(0, np.size(x, 0)):\n",
-    "        theta = theta + alpha * (y[i] - np.sum(x[i] * theta)) * x[i]\n",
     "        cost += (y[i] - np.sum(theta * x[i]))**2\n",
+    "    \n",
     "    if(last_cost - cost < 0.0001):\n",
     "        last_cost = cost\n",
     "        break\n",
     "    last_cost = cost\n",
     "\n",
-    "print(\"cost: \", last_cost)\n",
-    "print(theta)"
+    "print(\"\\u03B8=\", theta)\n",
+    "print(\"J(\\u03B8)=\", last_cost)"
    ]
   }
  ],
@@ -254,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
