[machine-learning][supervised-learning] Normal equations + locally weighted regression

--- a/math/matrix-derivatives.ipynb
+++ b/math/matrix-derivatives.ipynb
@@ -20,7 +20,12 @@
     "\n",
     "Thus, the gradient $\\nabla_{A}f(A)$ is itself an m-by-n matrix, whose (i, j)-element is $\\frac{\\partial f}{\\partial A_{ij}}$.\n",
     "\n",
-    "Without some proof, the following is derived pro\n",
+    "Without some proof, the following is derived properties:\n",
+    "\n",
+    "$$\n",
+    "\\nabla_{A^{T}} f(A) = (\\nabla_{A} f(A))^{T} \\\\\n",
+    "\\nabla_{A} |A| = |A| (A^{-1})^{T}\n",
+    "$$\n",
     "\n",
     "## Trace\n",
     "\n",
@@ -31,7 +36,7 @@
     "The trace operator has the property that for two matrices $A$ and $B$ such that $AB$ is square, we have that $trAB = trBA$.\n",
     "\n",
     "As corollaries of this, we also have, e.g.,\n",
-    "$$trABC = trCAB = trBCA,\n",
+    "$$trABC = trCAB = trBCA, \\\\\n",
     "trABCD = trDABC = trCDAB = trBCDA$$\n",
     "\n",
     "The following properties of the trace operator are also easily verified. Here, $A$ and $B$ are square matrices, and $a \\in \\mathbb{R}$:\n",
@@ -40,9 +45,7 @@
     "tr(A + B) = trA + trB \\\\\n",
     "tr aA = atrA \\\\\n",
     "\\nabla_{A} tr AB = B^{T} \\\\\n",
-    "\\nabla_{A^{T}} f(A) = (\\nabla_{A} f(A))^{T} \\\\\n",
     "\\nabla_{A} tr ABA^{T}C = CAB + C^{T}AB^{T} \\\\\n",
-    "\\nabla_{A} |A| = |A| (A^{-1})^{T}\n",
     "$$"
    ]
   },
