[supervised-learning][logistic-regression] WIP

--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -89,7 +89,75 @@
     "\n",
     "$$g(z)=\\frac{1}{1+e^{-z}}$$\n",
     "\n",
-    "is called the logistic function or the sigmoid function."
+    "is called the logistic function or the sigmoid function.\n",
+    "\n",
+    "Other functions that smoothly increase from 0 to 1 can also be used, but for good reasons, the sigmoid function is a fairly good natural choice. Before moving on, here's a useful property of the derivative of the sigmoid function, which we write a $g'$:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "g'(z) &= \\frac{\\partial}{\\partial{z}} \\frac{1}{1+ e^{-z}} \\\\\n",
+    "&= \\frac{1}{(1+e^{-z})^2} e^{-z} \\\\\n",
+    "&= \\frac{1}{1+e^{-z}} \\big(1- \\frac{1}{1+e^{-z}}\\big) \\\\\n",
+    "&= g(z)(1-g(z)) \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "So, given the logistic regression model, how do we fit $\\theta$ for it?\n",
+    "\n",
+    "Let's assume that\n",
+    "\n",
+    "$$\n",
+    "\\begin{cases}\n",
+    "\\begin{align}\n",
+    "P(y=1|x;\\theta) &= h_{\\theta}(x) \\\\\n",
+    "P(y=0|x;\\theta) &= 1- h_{\\theta}(x) \\\\\n",
+    "\\end{align}\n",
+    "\\end{cases}\n",
+    "\\implies p(y|x;\\theta)=(h_{\\theta}(x))^y (1-h_{\\theta}(x))^{1-y}\n",
+    "$$\n",
+    "\n",
+    "Assuming that the m training samples were generated independently, we can maximize the log likelyhood:\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "L(\\theta) &= p(\\vec{y} | X; \\theta) \\\\\n",
+    "&= \\prod_{i=1}^{m} p(y^{(i)} | x^{(i)}; \\theta) \\\\\n",
+    "&= \\prod_{i=1}^{m} (h_{\\theta}(x^{(i)}))^{y^{(i)}} (1 - h_{\\theta}(x^{(i)})^{1-y^{(i)}} \\\\\n",
+    " \\\\\n",
+    "l(\\theta) &= \\log L(\\theta) \\\\\n",
+    "&= \\sum_{i=1}^{m} \\big( y^{(i)} \\log h(x^{(i)}) + (1 - y^{(i)}) \\log(1 - h(x^{(i)})) \\big)\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "How to maximize the likelyhood? Using [gradient ascent](/notebooks/math/gradient-descent.ipynb) we surprisingly end up with the same update rule:\n",
+    "\n",
+    "$$\n",
+    "\\theta_{j} := \\theta_{j} + \\alpha \\big(y^{(i)} - h_{\\theta}(x^{(i)})\\big) x_j^{(i)}\n",
+    "$$\n",
+    "\n",
+    "Although this looks like the same as [LMS algorithm](/notebooks/machine-learning/supervised-learning/linear-regression.ipynb), it is not the same because $h_{\\theta}(x^{(i)}$ is now defined as a non-linear function of $\\theta^T x^{(i)}$. Nonetheless, this is not a coincidence.\n",
+    "\n",
+    "### Example\n",
+    "\n",
+    "Let's implement locally-weighted version of the logistic regression. In the datafile [logistic-regression-data.tar.gz](https://drive.google.com/open?id=1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N) we have a group of points (x, y) that we want to learn from new predictions. The problem is to maximize:\n",
+    "\n",
+    "$$\n",
+    "l(\\theta) = - \\frac{\\lambda}{2}\\theta^{T}\\theta + \\sum_{i=1}^{m} \\bigg( y^{(i)} \\log h_{\\theta}(x^{(i)}) + (1-y^{(i)}) \\log (1-h_{\\theta}(x^{(i)}))  \\bigg)\n",
+    "$$\n",
+    "\n",
+    "The $- \\frac{\\lambda}{2}\\theta^{T}\\theta$ is known as the regularization parameter which is needed for Newton's method to perform well on this task. Here we will use $\\lambda = 0.0001$.\n",
+    "\n",
+    "Using this definition, the gradient of $l(\\theta)$ is given by\n",
+    "\n",
+    "$$\\nabla_{\\theta} l(\\theta) = X^{T}z - \\lambda \\theta$$\n",
+    "\n",
+    "where $z \\in \\mathbb{R}^{m}$ is defined by\n",
+    "\n",
+    "$$z_{i} = w^{(i)} (y^{(i)} - h_{\\theta}(x^{(i)}))$$\n",
+    "\n",
+    "TODO: - finish example\n",
+    "      - stochastic gradient descent\n",
+    "      - newton's method"
    ]
   },
   {
