[supervised-learning][logistic-regression] WIP Logistic regression example

--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -155,17 +155,60 @@
     "\n",
     "$$z_{i} = w^{(i)} (y^{(i)} - h_{\\theta}(x^{(i)}))$$\n",
     "\n",
-    "TODO: - finish example\n",
-    "      - stochastic gradient descent\n",
-    "      - newton's method"
+    "And the Hessian is given by\n",
+    "\n",
+    "$$H = X^T D X - \\lambda I$$\n",
+    "\n",
+    "where $D \\in \\mathbb{R}^{m \\times m}$ is the diagonal matrix with \n",
+    "\n",
+    "$$D_{ii} = - w^{(i)} h_{\\theta}(x^{(i)})(1-h_{\\theta}(x^{(i)}))$$\n",
+    "\n",
+    "Given a query point $x$, we can choose to compute weights \n",
+    "\n",
+    "$$w^{(i)} = \\exp \\Big(- \\frac{\\Vert{x-x^{(i)}\\Vert}^2}{2\\tau^2} \\Big) $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N into /tmp/logistic-regression-data.tar.gz... Done.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import tarfile\n",
+    "import tempfile\n",
+    "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+    "\n",
+    "path = os.path.join(tempfile.gettempdir(), \"logistic-regression-data.tar.gz\")\n",
+    "\n",
+    "gdd.download_file_from_google_drive(file_id='1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N',\n",
+    "                                    dest_path=str(path))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#tar = \n",
+    "#for member in tar.getmembers():\n",
+    "#     f = tar.extractfile(member)\n",
+    "#     if f is not None:\n",
+    "#        content = f.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO: - finish example\n",
+    "      - stochastic gradient descent\n",
+    "      - newton's method"
+   ]
   }
  ],
  "metadata": {
