[supervised-learning][logistic-regression] Example - autodelete temp directory

--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -170,30 +170,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading 1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N into /tmp/logistic-regression-data.tar.gz... Done.\n"
+      "Downloading 1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N into /tmp/tmpbtct17y9/logistic-regression-data.tar.gz... Done.\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import tarfile\n",
-    "import tempfile\n",
+    "from tempfile import TemporaryDirectory\n",
     "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
     "\n",
-    "path = os.path.join(tempfile.gettempdir(), \"logistic-regression-data.tar.gz\")\n",
+    "with TemporaryDirectory() as tmpdir:\n",
+    "    targz_path = os.path.join(tmpdir, \"logistic-regression-data.tar.gz\")\n",
     "\n",
-    "gdd.download_file_from_google_drive(file_id='1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N',\n",
-    "                                    dest_path=str(path))\n",
+    "    gdd.download_file_from_google_drive(file_id='1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N',\n",
+    "                                    dest_path=str(targz_path))\n",
     "\n",
-    "\n",
-    "\n",
+    "    tar = tarfile.open(targz_path)\n",
+    "    #tar.extractall()\n",
+    "    tar.close()\n",
+    "    \n",
     "#tar = \n",
     "#for member in tar.getmembers():\n",
     "#     f = tar.extractfile(member)\n",
@@ -209,6 +212,13 @@
     "      - stochastic gradient descent\n",
     "      - newton's method"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -228,6 +238,31 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "310px"
+   },
+   "toc_section_display": true,
+   "toc_window_display": true
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
