[supervised-learning][logistic-regression] WIP Logistic regression example - load_dataset function

--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -170,38 +170,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading 1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N into /tmp/tmpbtct17y9/logistic-regression-data.tar.gz... Done.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import tarfile\n",
-    "from tempfile import TemporaryDirectory\n",
-    "from google_drive_downloader import GoogleDriveDownloader as gdd\n",
+    "%run logistic-regression-functions.py\n",
     "\n",
-    "with TemporaryDirectory() as tmpdir:\n",
-    "    targz_path = os.path.join(tmpdir, \"logistic-regression-data.tar.gz\")\n",
-    "\n",
-    "    gdd.download_file_from_google_drive(file_id='1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N',\n",
-    "                                    dest_path=str(targz_path))\n",
-    "\n",
-    "    tar = tarfile.open(targz_path)\n",
-    "    #tar.extractall()\n",
-    "    tar.close()\n",
-    "    \n",
-    "#tar = \n",
-    "#for member in tar.getmembers():\n",
-    "#     f = tar.extractfile(member)\n",
-    "#     if f is not None:\n",
-    "#        content = f.read()"
+    "X, y = load_dataset()\n",
+    "print(y)"
    ]
   },
   {
