--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -170,14 +170,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading 1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N into /tmp/tmp61nwb_7h/logistic-regression-data.tar.gz... Done.\n",
+      "[0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
+      " 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
+      " 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
+      " 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5]\n",
+      "[0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "%run logistic-regression-functions.py\n",
     "\n",
+    "def lwlr(X, y, x, tau):\n",
+    "    m, n = X.shape\n",
+    "    theta = np.zeros(n)\n",
+    "    w = np.zeros(m)\n",
+    "    \n",
+    "    for i in range(0, m):\n",
+    "        w[i] = np.exp(- np.linalg.norm(x - X[i], ord=1)**2 / 2 * tau ** 2)\n",
+    "    \n",
+    "    z = np.ones(n)\n",
+    "    while(np.linalg.norm(z, ord=1) > 0.000001):\n",
+    "        h = 1 / (1 + np.exp(np.dot(-X, theta)))\n",
+    "        print(h)\n",
+    "        break\n",
+    "\n",
     "X, y = load_dataset()\n",
-    "print(y)"
+    "\n",
+    "lwlr(X, y, 0.15, 5)\n",
+    "\n",
+    "print(theta)"
    ]
   },
   {
