[supervised-learning][logistic-regression] WIP Logistic regression example - lwlr function

--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -170,42 +170,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading 1ZfyFgzkZYxtA_O5zv4Y7oEIBAdlE4p1N into /tmp/tmp61nwb_7h/logistic-regression-data.tar.gz... Done.\n",
-      "[0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
-      " 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
-      " 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
-      " 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5]\n",
-      "[0. 0.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run logistic-regression-functions.py\n",
+    "\n",
+    "import numpy as np\n",
     "\n",
     "def lwlr(X, y, x, tau):\n",
     "    m, n = X.shape\n",
     "    theta = np.zeros(n)\n",
     "    w = np.zeros(m)\n",
+    "    l = 0.0001\n",
     "    \n",
     "    for i in range(0, m):\n",
     "        w[i] = np.exp(- np.linalg.norm(x - X[i], ord=1)**2 / 2 * tau ** 2)\n",
     "    \n",
-    "    z = np.ones(n)\n",
-    "    while(np.linalg.norm(z, ord=1) > 0.000001):\n",
-    "        h = 1 / (1 + np.exp(np.dot(-X, theta)))\n",
-    "        print(h)\n",
-    "        break\n",
+    "    grad = np.ones(n)\n",
+    "    while(np.linalg.norm(grad, ord=1) > 0.000001):\n",
+    "#         h = 1 / (1 + np.exp(np.dot(-X, theta)))\n",
+    "        h = np.zeros(n)\n",
+    "        for i in range(0, n):\n",
+    "            h[i] = 1 / (1 + np.exp(np.dot(-X[i], theta)))\n",
+    "        t = (y - h)\n",
+    "        grad = np.dot(X.T, w * (y - h)) - l * theta\n",
+    "        D = np.diag(-w * h * (1-h))\n",
+    "        H = np.linalg.multi_dot([X.T, D, X]) - l * np.ones(n)\n",
+    "        theta = theta - H / grad\n",
+    "    \n",
+    "    return theta\n",
     "\n",
     "X, y = load_dataset()\n",
     "\n",
-    "lwlr(X, y, 0.15, 5)\n",
+    "theta = lwlr(X, y, 0.15, 5)\n",
     "\n",
     "print(theta)"
    ]
@@ -216,7 +214,8 @@
    "source": [
     "TODO: - finish example\n",
     "      - stochastic gradient descent\n",
-    "      - newton's method"
+    "      - newton's method\n",
+    "      - hessian"
    ]
   },
   {
