[supervised-learning][logistic-regression] WIP Logistic regression example - lwlr function development + plotting

--- a/machine-learning/supervised-learning/logistic-regression.ipynb
+++ b/machine-learning/supervised-learning/logistic-regression.ipynb
@@ -185,27 +185,20 @@
     "    l = 0.0001\n",
     "    \n",
     "    for i in range(0, m):\n",
-    "        w[i] = np.exp(- np.linalg.norm(x - X[i], ord=1)**2 / 2 * tau ** 2)\n",
+    "        w[i] = np.exp(- (np.linalg.norm(x - X[i], ord=1)**2) / (2 * tau ** 2))\n",
     "    \n",
     "    grad = np.ones(n)\n",
-    "    while(np.linalg.norm(grad, ord=1) > 0.000001):\n",
-    "#         h = 1 / (1 + np.exp(np.dot(-X, theta)))\n",
-    "        h = np.zeros(n)\n",
-    "        for i in range(0, n):\n",
-    "            h[i] = 1 / (1 + np.exp(np.dot(-X[i], theta)))\n",
-    "        t = (y - h)\n",
+    "    while(np.linalg.norm(grad, ord=1) > 0.1):\n",
+    "        h = 1 / (1 + np.exp(np.dot(-X, theta)))\n",
     "        grad = np.dot(X.T, w * (y - h)) - l * theta\n",
     "        D = np.diag(-w * h * (1-h))\n",
     "        H = np.linalg.multi_dot([X.T, D, X]) - l * np.ones(n)\n",
-    "        theta = theta - H / grad\n",
-    "    \n",
-    "    return theta\n",
+    "        theta = theta - np.dot(np.linalg.inv(H), grad)\n",
+    "        \n",
+    "    return np.dot(x, theta) > 0\n",
     "\n",
     "X, y = load_dataset()\n",
-    "\n",
-    "theta = lwlr(X, y, 0.15, 5)\n",
-    "\n",
-    "print(theta)"
+    "plot(X, y, lwlr)"
    ]
   },
   {
